# kernelpatch_on_web

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_kpimg.sh  build_linux.sh  extract_on_windows.py  fetch_magiskboot_src.py
.github/workflows/: build_dep.yml  daily_update.yaml  deploy.yaml  sync_submodules.yaml
patch/: 0001-web-Fix-shift-overflow.patch  0002-web-Use-open-instead-of-fopen.patch  0003-tools-Fix-missing-struct-member-policydb_write.patch
patch/zlib/: 0001-cmake-Allow-build-on-wasm.patch  0001-cmake-change-zlib-linked-staticlly.patch
web/: index.css  index.html  utils.js  worker.js
